# audiopc

./: .gitignore  .metadata  CHANGELOG.md  CONTRIBUTE.md  LICENSE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
example/: README.md  pubspec.yaml
hook/: build.dart
ios/: audiopc.podspec
lib/: audio_metadata.dart  audiopc.dart  audiopc.g.dart  audiopc_bindings_generated.dart  audiopc_method_channel.dart  audiopc_native.dart  audiopc_platform.dart  audiopc_platform_interface.dart  audiopc_state.dart  audiopc_web.dart  audopc_helper.dart  player_event.dart  state.dart
linux/: CMakeLists.txt  audiopc_plugin.cc  audiopc_plugin_private.h
macos/: audiopc.podspec  audiopc_ffi.podspec
rust/: Cargo.toml  build.rs
rust/src/: engine.rs  ffi.rs  frb_generated.rs  lib.rs  main.rs
rust/src/api/: enums.rs  error.rs  mod.rs
rust/src/api/common/: log.rs
rust/src/api/filters/: delay.rs  distortion.rs  dynamics.rs  mod.rs  utilities.rs
rust/src/api/player/: mod.rs
rust/src/api/renderer/: output.rs  state.rs
rust/src/api/source/: decode.rs  filter.rs  http_stream.rs  mod.rs
rust/src/api/visualizer/: mod.rs
rust_backend/: Cargo.toml  bindings.h  build.rs  rust-toolchain.toml
rust_backend/src/: engine.rs  ffi.rs  lib.rs
src/: CMakeLists.txt  audiopc.c  audiopc.h
test/: audiopc_method_channel_test.dart  audiopc_test.dart
tools/: gen.dart
windows/: CMakeLists.txt  audio_player.cpp  audio_player.h  audio_samples_grabber.cpp  audio_samples_grabber.h  audiopc_plugin.cpp  audiopc_plugin.h  audiopc_plugin_c_api.cpp  circular_buffer.h  (+4 more)
(+80 files in other folders)
