[package]
name = "audiopc"

version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "my_app"
path = "src/main.rs"

[dependencies]
cpal = { version = "0.18.1"}
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
symphonia = { version = "0.6.0", features = ["all"] }
rustfft = "6.2"
tempfile = "3.14"
crossbeam-channel = "0.5.16"
flutter_rust_bridge = "=2.12.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
ndk-context = "0.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

