[package]
name = "audiopc_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cpal = "0.15"
once_cell = "1.21"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
symphonia = { version = "0.5", features = ["all"] }
log = "0.4.29"

[build-dependencies]
cbindgen = "0.29.2"
